--- a/src/app/componentes/pensamentos/criar-pensamentos/criar-pensamentos.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamentos/criar-pensamentos.component.html
@@ -2,23 +2,21 @@
     <header class="header">
         <h2>Adicione um <br> pensamento novo:</h2>
     </header>
-    <form>
+    <form [formGroup]="formulario" class="formulario">
         <label for="pensamento">Pensamento</label>
         <input
         type="textarea"
         class="input"
         id="pensamento"
-        name="pensamento"
-        placeholder="Digite o pensamento"
-        [(ngModel)]="pensamento.conteudo">
+        formControlName="conteudo"
+        placeholder="Digite o pensamento">
         <label for="autoria">Autoria ou fonte</label>
         <input
         type="text"
         class="input"
         id="autoria"
-        name="autoria"
-        placeholder="Digite a autoria ou fonte"
-        [(ngModel)]="pensamento.autoria">
+        formControlName="autoria"
+        placeholder="Digite a autoria ou fonte">
         <label for="modelo">Selecione o modelo do card:</label>
         <div class="container-radio">
             <div class="radio-modelo">
@@ -27,8 +25,7 @@
                         type="radio"
                         id="modelo1"
                         value="modelo1"
-                        name="modelo-card"
-                        [(ngModel)]="pensamento.modelo">
+                        formControlName="modelo">
                     <div class="custom-radio">
                         <span></span>
                     </div>
@@ -37,8 +34,8 @@
                 Prévia:
                 <div class="modelo modelo1 ff-roboto-mono">
                     <img src="../../../../assets/imagens/modelo1.png" alt="Aspas azuis">
-                    <p class="conteudo">{{pensamento.conteudo}}</p>
-                    <p class="autoria"><b>{{pensamento.autoria}}</b></p>
+                    <p class="conteudo">{{formulario.get('conteudo')?.value}}</p>
+                    <p class="autoria"><b>{{formulario.get('autoria')?.value}}</b></p>
                 </div>
             </div>
             <div class="radio-modelo">
@@ -47,8 +44,7 @@
                         type="radio"
                         id="modelo2"
                         value="modelo2"
-                        name="modelo-card"
-                        [(ngModel)]="pensamento.modelo">
+                        formControlName="modelo">
                     <div class="custom-radio">
                         <span></span>
                     </div>
@@ -57,8 +53,8 @@
                 Prévia:
                 <div class="modelo modelo1 ff-roboto-mono">
                     <img src="../../../../assets/imagens/modelo2.png" alt="Aspas azul claro">
-                    <p class="conteudo">{{pensamento.conteudo}}</p>
-                    <p class="autoria"><b>{{pensamento.autoria}}</b></p>
+                    <p class="conteudo">{{formulario.get('conteudo')?.value}}</p>
+                    <p class="autoria"><b>{{formulario.get('autoria')?.value}}</b></p>
                 </div>
             </div>
             <div class="radio-modelo">
@@ -67,8 +63,7 @@
                         type="radio"
                         id="modelo3"
                         value="modelo3"
-                        name="modelo-card"
-                        [(ngModel)]="pensamento.modelo">
+                        formControlName="modelo">
                     <div class="custom-radio">
                         <span></span>
                     </div>
@@ -77,8 +72,8 @@
                 Prévia:
                 <div class="modelo modelo1 ff-roboto-mono">
                     <img src="../../../../assets/imagens/modelo3.png" alt="Aspas verdes">
-                    <p class="conteudo">{{pensamento.conteudo}}</p>
-                    <p class="autoria"><b>{{pensamento.autoria}}</b></p>
+                    <p class="conteudo">{{formulario.get('conteudo')?.value}}</p>
+                    <p class="autoria"><b>{{formulario.get('autoria')?.value}}</b></p>
                 </div>
             </div>
         </div>
